finalizing project with admin api and CORS configuration