@@ -1,14 +1,13 @@
 package com.backbenchcoders.innspiration.service;
 
-import com.backbenchcoders.innspiration.dto.HotelDto;
-import com.backbenchcoders.innspiration.dto.HotelInfoDto;
-import com.backbenchcoders.innspiration.dto.RoomDto;
+import com.backbenchcoders.innspiration.dto.*;
 import com.backbenchcoders.innspiration.entity.Hotel;
 import com.backbenchcoders.innspiration.entity.Room;
 import com.backbenchcoders.innspiration.entity.User;
 import com.backbenchcoders.innspiration.exception.ResourceNotFoundException;
 import com.backbenchcoders.innspiration.exception.UnauthorizedException;
 import com.backbenchcoders.innspiration.repository.HotelRepository;
+import com.backbenchcoders.innspiration.repository.InventoryRepository;
 import com.backbenchcoders.innspiration.repository.RoomRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -17,7 +16,11 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.temporal.ChronoUnit;
 import java.util.List;
+import java.util.stream.Collectors;
+
+import static com.backbenchcoders.innspiration.util.AppUtils.getCurrentUser;
 
 @Service
 @Slf4j
@@ -27,6 +30,7 @@ public class HotelServiceImpl implements HotelService {
     private final HotelRepository hotelRepository;
     public final ModelMapper modelMapper;
     private final InventoryService inventoryService;
+    private final InventoryRepository inventoryRepository;
     private final RoomRepository roomRepository;
 
     @Override
@@ -35,7 +39,7 @@ public class HotelServiceImpl implements HotelService {
         Hotel hotel = modelMapper.map(hotelDto, Hotel.class);
         hotel.setIsActive(false);
 
-        User user = (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        User user = getCurrentUser();
         hotel.setOwner(user);
 
         hotelRepository.save(hotel);
@@ -50,8 +54,8 @@ public class HotelServiceImpl implements HotelService {
                       .findById(id)
                       .orElseThrow(()->new ResourceNotFoundException("Hotel Not Found with id: "+id));
 
-        User user = (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        if(!user.equals(hotel.getOwner())){
+        User user = getCurrentUser();
+        if(!user.getId().equals(hotel.getOwner().getId())){
            throw new UnauthorizedException("This user does not own this hotel with id: "+id);
         }
 
@@ -65,8 +69,8 @@ public class HotelServiceImpl implements HotelService {
                       .findById(id)
                       .orElseThrow(()->new ResourceNotFoundException("Hotel Not found with id: "+id));
 
-        User user = (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        if(!user.equals(hotel.getOwner())){
+        User user = getCurrentUser();
+        if(!user.getId().equals(hotel.getOwner().getId())){
             throw new UnauthorizedException("This user does not own this hotel with id: "+id);
         }
 
@@ -84,7 +88,7 @@ public class HotelServiceImpl implements HotelService {
                 .findById(id)
                 .orElseThrow(()-> new ResourceNotFoundException("Hotel Not Found with id: "+id));
 
-        User user = (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        User user = getCurrentUser();
         if(!user.getId().equals(hotel.getOwner().getId())){
             throw new UnauthorizedException("This user does not own this hotel with id: "+id);
         }
@@ -105,7 +109,7 @@ public class HotelServiceImpl implements HotelService {
                 .findById(hotelId)
                 .orElseThrow(()-> new ResourceNotFoundException("Hotel Not Found with id: "+hotelId));
 
-        User user = (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        User user = getCurrentUser();
         if(!user.getId().equals(hotel.getOwner().getId())){
             throw new UnauthorizedException("This user does not own this hotel with id: "+hotelId);
         }
@@ -117,17 +121,40 @@ public class HotelServiceImpl implements HotelService {
     }
 
     @Override
-    public HotelInfoDto getHotelInfoById(Long hotelId) {
+    public HotelInfoDto getHotelInfoById(Long hotelId, HotelInfoRequestDto hotelInfoRequestDto) {
 
         Hotel hotel = hotelRepository
                 .findById(hotelId)
-                .orElseThrow(()-> new ResourceNotFoundException("Hotel Not Found with id: "+hotelId));
+                .orElseThrow(() -> new ResourceNotFoundException("Hotel not found with ID: "+hotelId));
 
-        List<RoomDto> rooms = hotel.getRooms()
+        long daysCount = ChronoUnit.DAYS.between(hotelInfoRequestDto.getStartDate(), hotelInfoRequestDto.getEndDate())+1;
+
+        List<RoomPriceDto> roomPriceDtoList = inventoryRepository.findRoomAveragePrice(hotelId,
+                hotelInfoRequestDto.getStartDate(), hotelInfoRequestDto.getEndDate(),
+                hotelInfoRequestDto.getRoomsCount(), daysCount);
+
+        List<RoomPriceResponseDto> rooms = roomPriceDtoList.stream()
+                .map(roomPriceDto -> {
+                    RoomPriceResponseDto roomPriceResponseDto = modelMapper.map(roomPriceDto.getRoom(),
+                            RoomPriceResponseDto.class);
+                    roomPriceResponseDto.setPrice(roomPriceDto.getPrice());
+                    return roomPriceResponseDto;
+                })
+                .collect(Collectors.toList());
+
+        return new HotelInfoDto(modelMapper.map(hotel, HotelDto.class), rooms);
+    }
+
+    @Override
+    public List<HotelDto> getAllHotels() {
+        User user = getCurrentUser();
+        log.info("Getting all hotels for the admin user with ID: {}",user.getId());
+
+        List<Hotel> hotels = hotelRepository.findByOwner(user);
+
+        return hotels
                 .stream()
-                .map((element) -> modelMapper.map(element, RoomDto.class))
-                .toList();
-
-        return new HotelInfoDto(modelMapper.map(hotel,HotelDto.class),rooms);
+                .map((element) -> modelMapper.map(element, HotelDto.class))
+                .collect(Collectors.toList());
     }
 }
